تحديث روابط الصفحات

--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
         <div class="brand">عُلوم عقارية</div>
         <div class="nav-links">
             <a href="#">الرئيسية</a>
-            <a target="_blank" href="/padges/family.html">أهل عُلوم عقارية</a>
-            <a target="_blank" href="/padges/commuinty.html">مجتمعنا</a>
+            <a target="_blank" href="https://ahmedabdalgayed.github.io/3olom-Acar/padges/family.html">أهل عُلوم عقارية</a>
+            <a target="_blank" href="https://ahmedabdalgayed.github.io/3olom-Acar/padges/commuinty.html">مجتمعنا</a>
             <a target="_blank" href="#">عروضنا</a>
             <div id="moreBtn" class="more-btn">
                 اضغط للمزيد <span class="menu-icon">☰</span>
@@ -320,8 +320,8 @@
         <button class="close-btn" id="closeSidebarBtn">×</button>
         <h3>القائمة</h3>
         <a href="#">الرئيسية</a>
-        <a target="_blank" href="/padges/family.html">أهل عُلوم عقارية</a>
-        <a target="_blank" href="/padges/commuinty.html">مجتمعنا</a>
+        <a target="_blank" href="https://ahmedabdalgayed.github.io/3olom-Acar/padges/family.html">أهل عُلوم عقارية</a>
+        <a target="_blank" href="https://ahmedabdalgayed.github.io/3olom-Acar/padges/commuinty.html">مجتمعنا</a>
         <a target="_blank" href="#">عروضنا</a>
         <a target="_blank" href="#">شراكاتنا</a>
         <a target="_blank" href="#">فرص العمل</a>
