ضبط تعديلات الصور وبعض الروابط

--- a/commuinty.html
+++ b/commuinty.html
@@ -281,7 +281,7 @@
     <nav class="navbar">
         <div class="brand">عُلوم عقارية</div>
         <div class="nav-links">
-            <a href="#">الرئيسية</a>
+            <a target="_blank" href="index.html">الرئيسية</a>
             <a target="_blank" href="/padges/family.html">أهل عُلوم عقارية</a>
             <a target="_blank" href="/padges/commuinty.html">مجتمعنا</a>
             <a target="_blank" href="#">عروضنا</a>
@@ -295,7 +295,7 @@
     <aside class="sidebar" id="sidebar">
         <button class="close-btn" id="closeSidebarBtn">×</button>
         <h3>القائمة</h3>
-        <a href="#">الرئيسية</a>
+        <a target="_blank" href="index.html">الرئيسية</a>
         <a target="_blank" href="/padges/family.html">أهل عُلوم عقارية</a>
         <a target="_blank" href="/padges/commuinty.html">مجتمعنا</a>
         <a target="_blank" href="#">عروضنا</a>
