--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
     <nav class="navbar">
         <div class="brand">عُلوم عقارية</div>
         <div class="nav-links">
-            <a href="#">الرئيسية</a>
-            <a target="_blank" href="/padges/family.html">أهل عُلوم عقارية</a>
-            <a target="_blank" href="/padges/commuinty.html">مجتمعنا</a>
+            <a href="index.html">الرئيسية</a>
+            <a target="_blank" href="family.html">أهل عُلوم عقارية</a>
+            <a target="_blank" href="commuinty.html">مجتمعنا</a>
             <a target="_blank" href="#">عروضنا</a>
             <div id="moreBtn" class="more-btn">
                 اضغط للمزيد <span class="menu-icon">☰</span>
@@ -319,9 +319,9 @@
     <aside class="sidebar" id="sidebar">
         <button class="close-btn" id="closeSidebarBtn">×</button>
         <h3>القائمة</h3>
-        <a href="#">الرئيسية</a>
-        <a target="_blank" href="/padges/family.html">أهل عُلوم عقارية</a>
-        <a target="_blank" href="/padges/commuinty.html">مجتمعنا</a>
+        <a target="_blank" href="index.html">الرئيسية</a>
+        <a target="_blank" href="family.html">أهل عُلوم عقارية</a>
+        <a target="_blank" href="commuinty.html">مجتمعنا</a>
         <a target="_blank" href="#">عروضنا</a>
         <a target="_blank" href="#">شراكاتنا</a>
         <a target="_blank" href="#">فرص العمل</a>
