رفع صفحات جديده + تحديث صفحات موجوده

--- a/commuinty.html
+++ b/commuinty.html
@@ -283,8 +283,8 @@
         <div class="nav-links">
             <a target="_blank" href="index.html">الرئيسية</a>
             <a target="_blank" href="/padges/family.html">أهل عُلوم عقارية</a>
-            <a target="_blank" href="/padges/commuinty.html">مجتمعنا</a>
-            <a target="_blank" href="#">عروضنا</a>
+            <a href="/padges/commuinty.html">مجتمعنا</a>
+            <a target="_blank" href="3orod.html">عروضنا</a>
             <div id="moreBtn" class="more-btn">
                 اضغط للمزيد <span class="menu-icon">☰</span>
             </div>
@@ -296,10 +296,10 @@
         <button class="close-btn" id="closeSidebarBtn">×</button>
         <h3>القائمة</h3>
         <a target="_blank" href="index.html">الرئيسية</a>
-        <a target="_blank" href="/padges/family.html">أهل عُلوم عقارية</a>
-        <a target="_blank" href="/padges/commuinty.html">مجتمعنا</a>
-        <a target="_blank" href="#">عروضنا</a>
-        <a target="_blank" href="#">شراكاتنا</a>
+        <a target="_blank" href="family.html">أهل عُلوم عقارية</a>
+        <a href="commuinty.html">مجتمعنا</a>
+        <a target="_blank" href="3orod.html">عروضنا</a>
+        <a target="_blank" href="SharQatna.html">شراكاتنا</a>
         <a target="_blank" href="#">فرص العمل</a>
         <a target="_blank" href="#">السياسات والخصوصية</a>
         <a target="_blank" href="#">المتجر</a>
