--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <a href="index.html">الرئيسية</a>
             <a target="_blank" href="family.html">أهل عُلوم عقارية</a>
             <a target="_blank" href="commuinty.html">مجتمعنا</a>
-            <a target="_blank" href="#">عروضنا</a>
+            <a target="_blank" href="3orod.html">عروضنا</a>
             <div id="moreBtn" class="more-btn">
                 اضغط للمزيد <span class="menu-icon">☰</span>
             </div>
@@ -319,11 +319,11 @@
     <aside class="sidebar" id="sidebar">
         <button class="close-btn" id="closeSidebarBtn">×</button>
         <h3>القائمة</h3>
-        <a target="_blank" href="index.html">الرئيسية</a>
+        <a href="index.html">الرئيسية</a>
         <a target="_blank" href="family.html">أهل عُلوم عقارية</a>
         <a target="_blank" href="commuinty.html">مجتمعنا</a>
-        <a target="_blank" href="#">عروضنا</a>
-        <a target="_blank" href="#">شراكاتنا</a>
+        <a target="_blank" href="3orod.html">عروضنا</a>
+        <a target="_blank" href="SharQatna.html">شراكاتنا</a>
         <a target="_blank" href="#">فرص العمل</a>
         <a target="_blank" href="#">السياسات والخصوصية</a>
         <a target="_blank" href="#">المتجر</a>
