رفع التحديثات الجديده للصور

--- a/SharQatna.html
+++ b/SharQatna.html
@@ -327,7 +327,7 @@
             <a target="_blank" href="index.html">الرئيسية</a>
             <a target="_blank" href="/padges/family.html">أهل عُلوم عقارية</a>
             <a target="_blank" href="/padges/commuinty.html">مجتمعنا</a>
-            <a target="_blank" href="#">عروضنا</a>
+            <a target="_blank" href="3orod.html">عروضنا</a>
             <div id="moreBtn" class="more-btn">
                 اضغط للمزيد <span class="menu-icon">☰</span>
             </div>
@@ -342,7 +342,7 @@
         <a target="_blank" href="family.html">أهل عُلوم عقارية</a>
         <a href="commuinty.html">مجتمعنا</a>
         <a target="_blank" href="3orod.html">عروضنا</a>
-        <a target="_blank" href="#">شراكاتنا</a>
+        <a target="_blank" href="SharQatna.html">شراكاتنا</a>
         <a target="_blank" href="#">فرص العمل</a>
         <a target="_blank" href="#">السياسات والخصوصية</a>
         <a target="_blank" href="#">المتجر</a>
