--- a/family.html
+++ b/family.html
@@ -350,7 +350,7 @@
 
     <!-- قسم الإدارة -->
     <header>
-        <img src="../imges/2.jpg" alt="صورة المدير">
+        <img src="2.jpg" alt="صورة المدير">
         <h1>أ. عبد الله الربيش</h1>
         <p>العقار مش مجرد مبنى أو جدران وأسقف، هو استثمار في المستقبل وأمان للأجيال. رؤيتنا واضحة: إننا نقدّم حلول
             عقارية مبتكرة،
@@ -365,42 +365,42 @@
         <h2>فريق العمل</h2>
         <div class="grid">
             <div class="card">
-                <img src="../imges/1.jpg" alt="عضو">
+                <img src="1.jpg" alt="عضو">
                 <h3>محمد علي</h3>
                 <p>مسؤول التسويق</p>
             </div>
             <div class="card">
-                <img src="../imges/9.jpg" alt="عضو">
+                <img src="9.jpg" alt="عضو">
                 <h3>سارة حسن</h3>
                 <p>مديرة المشاريع</p>
             </div>
             <div class="card">
-                <img src="../imges/1.jpg" alt="عضو">
+                <img src="1.jpg" alt="عضو">
                 <h3>إبراهيم ناجي</h3>
                 <p>خبير عقاري</p>
             </div>
             <div class="card">
-                <img src="../imges/5.png" alt="عضو">
+                <img src="5.png" alt="عضو">
                 <h3>فارس محمد</h3>
                 <p>خبير تفاوض</p>
             </div>
             <div class="card">
-                <img src="../imges/2.jpg" alt="عضو">
+                <img src="2.jpg" alt="عضو">
                 <h3>وائل عبدالحميد</h3>
                 <p>خبير تفاوض</p>
             </div>
             <div class="card">
-                <img src="../imges/5.png" alt="عضو">
+                <img src="5.png" alt="عضو">
                 <h3>احمد ناصر</h3>
                 <p>أستشاري عقاري</p>
             </div>
             <div class="card">
-                <img src="../imges/2.jpg" alt="عضو">
+                <img src="2.jpg" alt="عضو">
                 <h3>فؤاد العامري</h3>
                 <p>مسؤول قانوني</p>
             </div>
             <div class="card">
-                <img src="../imges/1.jpg" alt="عضو">
+                <img src="1.jpg" alt="عضو">
                 <h3>إياد محمد</h3>
                 <p>عقاري مخضرم</p>
             </div>
@@ -412,12 +412,12 @@
         <h2>أبرز العضويات</h2>
         <div class="grid">
             <div class="card">
-                <img src="../imges/OIP.png" alt="عضوية">
+                <img src="OIP.png" alt="عضوية">
                 <h3>جمعية المطورين العقاريين</h3>
                 <p>عضوية فخرية منذ 2020</p>
             </div>
             <div class="card">
-                <img src="../imges/السعيدان-1.jpg" alt="عضوية">
+                <img src="السعيدان-1.jpg" alt="عضوية">
                 <h3>شركة أل سعيدان للعقارات</h3>
                 <p>عضوية مثمره منذ 2018</p>
             </div>
@@ -429,14 +429,14 @@
         <h2>الإسهامات السابقة</h2>
         <div class="grid">
             <div class="card">
-                <img src="../imges/eleskan.png" alt="مساهمة">
+                <img src="eleskan.png" alt="مساهمة">
                 <h3>مشروع الإسكان التنموي</h3>
                 <a href="https://example.com" target="_blank" class="btn">المزيد</a>
             </div>
         </div>
         <div style="margin-top: 20px;" class="grid">
             <div class="card">
-                <img src="../imges/fasel.png" alt="مساهمة">
+                <img src="fasel.png" alt="مساهمة">
                 <h3>إسكان جامعة الملك فيصل الدولية</h3>
                 <a href="https://example.com" target="_blank" class="btn">المزيد</a>
             </div>
@@ -448,13 +448,13 @@
         <h2>أصدقاء علوم عقارية</h2>
         <div class="grid">
             <div class="card">
-                <img src="../imges/89210.jpg" alt="صديق">
+                <img src="89210.jpg" alt="صديق">
                 <h3>شركة السعودية للتنمية</h3>
                 <a href="https://example.com" target="_blank" class="btn">زيارة</a>
             </div>
             <div class="grid">
                 <div class="card">
-                    <img src="../imges/elsahra.png" alt="صديق">
+                    <img src="elsahra.png" alt="صديق">
                     <h3>شركة الزهراء للتنمية</h3>
                     <a href="https://example.com" target="_blank" class="btn">زيارة</a>
                 </div>
