التحديثات النهائية الدفعة الاولى

--- a/3orod.html
+++ b/3orod.html
@@ -94,7 +94,7 @@
             background: #0d6efd;
             color: #fff;
             padding: 20px;
-            transition: left .4s ease;
+            transition: transform .4s ease;
             /* ← بدل right */
             z-index: 1200;
             box-shadow: 2px 0 10px rgba(0, 0, 0, .2);
@@ -345,9 +345,9 @@
         <a target="_blank" href="commuinty.html">مجتمعنا</a>
         <a href="3orod.html">عروضنا</a>
         <a target="_blank" href="SharQatna.html">شراكاتنا</a>
-        <a target="_blank" href="#">فرص العمل</a>
-        <a target="_blank" href="#">السياسات والخصوصية</a>
+        <a target="_blank" href="forasAmal.html">فرص العمل</a>
         <a target="_blank" href="#">المتجر</a>
+        <a target="_blank" href="seyasat.html">السياسات والخصوصية</a>
     </aside>
 
     <!-- Overlay -->
