--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
         <a target="_blank" href="commuinty.html">مجتمعنا</a>
         <a target="_blank" href="3orod.html">عروضنا</a>
         <a target="_blank" href="SharQatna.html">شراكاتنا</a>
-        <a target="_blank" href="#">فرص العمل</a>
-        <a target="_blank" href="#">السياسات والخصوصية</a>
+        <a target="_blank" href="forasAmal.html">فرص العمل</a>
+        <a target="_blank" href="seyasat.html">السياسات والخصوصية</a>
         <a target="_blank" href="#">المتجر</a>
     </aside>
 
