--- a/seyasat.html
+++ b/seyasat.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الشركاء</title>
+    <title>السياسات والخصوصية</title>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -12,8 +12,9 @@
             font-family: 'Rubik', sans-serif;
             background: #f7f9fc;
             color: #333;
-            line-height: 1.6;
+            line-height: 1.8;
         }
+
 
         /* naaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaav */
         .navbar {
@@ -100,6 +101,7 @@
 
         .sidebar.active {
             transform: translateX(0);
+
         }
 
         /* ← بدل right:0 */
@@ -156,7 +158,7 @@
 
         header {
             text-align: center;
-            padding: 100px 20px;
+            padding: 120px 20px;
             background: linear-gradient(135deg, #0052D4, #4364F7, #6FB1FC);
             color: #fff;
             animation: fadeIn 1.5s ease;
@@ -164,118 +166,40 @@
 
         header h1 {
             font-size: 32px;
-            margin-bottom: 10px;
-        }
-
-        header h3 {
-            font-size: 20px;
             margin: 0;
-            opacity: 0.9;
         }
 
         section {
-            padding: 60px 20px;
-            text-align: center;
+            padding: 50px 20px;
+            max-width: 900px;
+            margin: auto;
+            animation: slideUp 1s ease;
         }
 
         section h2 {
-            font-size: 26px;
-            margin-bottom: 30px;
+            font-size: 24px;
+            margin-bottom: 20px;
             color: #0052D4;
         }
 
-        /* ملاحظات */
-        .note {
-            background: #fff3cd;
-            color: #856404;
-            border: 1px solid #ffeeba;
-            border-radius: 10px;
-            padding: 20px;
-            max-width: 700px;
-            margin: 0 auto 40px;
-            font-size: 16px;
-            font-weight: 600;
-            animation: slideInLeft 1s ease;
-        }
-
-        /* الشركات */
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 40px;
-        }
-
-        .card {
-            background: linear-gradient(135deg, #ffffff, #f0f4ff);
-            border-radius: 16px;
-            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
-            padding: 20px 25px 70px;
-            /* مساحة للزر */
-            position: relative;
-            transition: transform 0.4s ease, box-shadow 0.4s ease;
-            opacity: 0;
-            transform: scale(0.9);
-            margin-right: 15px;
-        }
-
-        .card.visible {
-            opacity: 1;
-            transform: scale(1);
-        }
-
-        .card:hover {
-            transform: scale(1.05);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
-        }
-
-        .card img {
-            max-width: 100px;
+        section p {
             margin-bottom: 15px;
-            border-radius: 10px;
+            font-size: 16px;
+            color: #444;
         }
 
-        .card h3 {
-            margin: 10px 0 5px;
-            font-size: 20px;
-            color: #333;
+        ul {
+            text-align: right;
+            padding-right: 20px;
+            margin: 0 0 30px;
         }
 
-        .card p {
+        ul li {
+            margin-bottom: 10px;
             font-size: 15px;
             color: #555;
-            margin: 8px 0;
+            list-style: "✔️ ";
         }
-
-        .discount-box {
-            background: #e3f2fd;
-            border: 1px dashed #0052D4;
-            border-radius: 8px;
-            padding: 8px 12px;
-            font-weight: 600;
-            color: #0052D4;
-            margin: 12px auto;
-            display: inline-block;
-        }
-
-        .card a {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 94%;
-            text-align: center;
-            background: #0052D4;
-            color: #fff;
-            text-decoration: none;
-            padding: 14px;
-            border-bottom-left-radius: 16px;
-            border-bottom-right-radius: 16px;
-            transition: 0.3s;
-        }
-
-        .card a:hover {
-            background: #003a9c;
-        }
-
 
         footer {
             background-color: #09404e;
@@ -304,14 +228,14 @@
             }
         }
 
-        @keyframes slideInLeft {
+        @keyframes slideUp {
             from {
-                transform: translateX(-40px);
+                transform: translateY(30px);
                 opacity: 0;
             }
 
             to {
-                transform: translateX(0);
+                transform: translateY(0);
                 opacity: 1;
             }
         }
@@ -320,13 +244,12 @@
 
 <body>
 
-
     <nav class="navbar">
         <div class="brand">عُلوم عقارية</div>
         <div class="nav-links">
             <a target="_blank" href="index.html">الرئيسية</a>
             <a target="_blank" href="/padges/family.html">أهل عُلوم عقارية</a>
-            <a target="_blank" href="/padges/commuinty.html">مجتمعنا</a>
+            <a href="/padges/commuinty.html">مجتمعنا</a>
             <a target="_blank" href="3orod.html">عروضنا</a>
             <div id="moreBtn" class="more-btn">
                 اضغط للمزيد <span class="menu-icon">☰</span>
@@ -342,10 +265,10 @@
         <a target="_blank" href="family.html">أهل عُلوم عقارية</a>
         <a target="_blank" href="commuinty.html">مجتمعنا</a>
         <a target="_blank" href="3orod.html">عروضنا</a>
-        <a href="SharQatna.html">شراكاتنا</a>
+        <a target="_blank" href="SharQatna.html">شراكاتنا</a>
         <a target="_blank" href="forasAmal.html">فرص العمل</a>
         <a target="_blank" href="#">المتجر</a>
-        <a target="_blank" href="seyasat.html">السياسات والخصوصية</a>
+        <a href="seyasat.html">السياسات والخصوصية</a>
     </aside>
 
     <!-- Overlay -->
@@ -353,46 +276,91 @@
 
     <!-- الهيدر -->
     <header>
-        <h1>الشركاء</h1>
-        <h3>في القطاع العقاري</h3>
+        <h1>السياسات و الخصوصية</h1>
     </header>
 
-    <!-- الملاحظات -->
+    <!-- السياسة العامة -->
     <section>
-        <div class="note">
-            ⚠️ العروض حصرية لأعضاء المجتمع فقط
-        </div>
+        <h2>السياسة العامة</h2>
+        <p>
+            نحن في شركة <strong>علوم عقارية</strong> نلتزم بتقديم خدمات عقارية متكاملة تلبي احتياجات عملائنا وتواكب
+            تطلعات السوق.
+            تعتمد سياستنا العامة على الشفافية، الجودة، والالتزام بأعلى المعايير المهنية في جميع تعاملاتنا.
+        </p>
+        <ul>
+            <li>توفير حلول عقارية تشمل البيع، الشراء، التأجير، وإدارة الأملاك.</li>
+            <li>الالتزام بالقوانين والأنظمة المحلية المنظمة للقطاع العقاري.</li>
+            <li>تقديم استشارات عقارية متخصصة قائمة على المعرفة والخبرة.</li>
+            <li>ضمان الشفافية في جميع المعاملات المالية والإجرائية.</li>
+            <li>تطوير خدماتنا بشكل مستمر لمواكبة احتياجات السوق والعملاء.</li>
+        </ul>
     </section>
 
-    <!-- الشركات -->
+    <!-- سياسة الخصوصية -->
     <section>
-        <h2>شركاؤنا المميزون</h2>
-        <div class="grid">
-            <div class="card">
-                <img src="imges/الاساليب العمرانيه .png" alt="شركة 1">
-                <h3>شركة الاستثمار العقاري</h3>
-                <p>خصم حتى 25%</p>
-                <div class="discount-box">CODE25</div>
-                <a href="https://example.com" target="_blank">اضغط للإطلاع</a>
-            </div>
-
-            <div class="card">
-                <img src="imges/عقار.png" alt="شركة 2">
-                <h3>شركة التطوير العمراني</h3>
-                <p>خصم حتى 30%</p>
-                <div class="discount-box">BUILD30</div>
-                <a href="https://example.com" target="_blank">اضغط للإطلاع</a>
-            </div>
-
-            <div class="card">
-                <img src="imges/المياه.png" alt="شركة 3">
-                <h3>شركة الخدمات العقارية</h3>
-                <p>خصم حتى 15%</p>
-                <div class="discount-box">HOME15</div>
-                <a href="https://example.com" target="_blank">اضغط للإطلاع</a>
-            </div>
-        </div>
+        <h2>سياسة الخصوصية</h2>
+        <p>
+            نولي أهمية قصوى لحماية بيانات عملائنا ونسعى لضمان سرية جميع المعلومات التي يتم جمعها أو مشاركتها عبر منصاتنا
+            الإلكترونية.
+            باستخدامك لخدماتنا، فإنك توافق على سياسة الخصوصية التالية:
+        </p>
+        <ul>
+            <li>جمع البيانات الشخصية يتم فقط للأغراض المتعلقة بالخدمات العقارية.</li>
+            <li>لن يتم مشاركة بيانات العملاء مع أي طرف ثالث دون موافقة مسبقة.</li>
+            <li>استخدام تقنيات التشفير لحماية المعلومات المخزنة أو المنقولة.</li>
+            <li>إتاحة إمكانية تعديل أو حذف بيانات العميل عند الطلب.</li>
+            <li>الالتزام بتحديث أنظمة الأمان بشكل دوري لمواجهة التهديدات السيبرانية.</li>
+        </ul>
     </section>
+
+    <!-- سياسة الاسترجاع -->
+    <section>
+        <h2>سياسة الاسترجاع</h2>
+        <p>
+            تهدف سياسة الاسترجاع إلى ضمان حقوق عملائنا وتوفير تجربة موثوقة في جميع تعاملاتنا.
+            نضع الشروط التالية للاسترجاع أو استرداد المبالغ المدفوعة:
+        </p>
+        <ul>
+            <li>يحق للعميل طلب استرجاع المبلغ في حال عدم تقديم الخدمة المتفق عليها.</li>
+            <li>تتم عملية الاسترجاع خلال مدة أقصاها 14 يوم عمل.</li>
+            <li>لا يشمل الاسترجاع الخدمات التي تم تنفيذها بشكل كامل قبل الطلب.</li>
+            <li>الرسوم الإدارية أو المصاريف البنكية قد تخصم من المبلغ المسترجع.</li>
+            <li>تتم جميع عمليات الاسترداد وفق القوانين والأنظمة المحلية المعمول بها.</li>
+        </ul>
+    </section>
+
+    <!-- سياسة الاستخدام العادل -->
+    <section>
+        <h2>سياسة الاستخدام العادل</h2>
+        <p>
+            نلتزم في شركة <strong>علوم عقارية</strong> بتوفير منصات إلكترونية وخدمات عقارية آمنة وسهلة الاستخدام.
+            ويشمل ذلك التزام العملاء بعدم إساءة استخدام المنصات أو الخدمات بأي شكل من الأشكال.
+        </p>
+        <ul>
+            <li>يُمنع استخدام منصاتنا في أي أنشطة غير قانونية أو مخالفة للأنظمة المحلية.</li>
+            <li>لا يُسمح بانتحال صفة الغير أو تقديم بيانات غير صحيحة عند استخدام الخدمات.</li>
+            <li>يلتزم العملاء باستخدام الخدمات العقارية فقط للأغراض المخصصة لها.</li>
+            <li>تحتفظ الشركة بحق تعليق أو إيقاف أي حساب في حال تم اكتشاف إساءة استخدام.</li>
+            <li>تُعتبر جميع الحقوق الفكرية والتجارية الخاصة بالموقع مملوكة للشركة ولا يجوز استغلالها دون إذن مكتوب.</li>
+        </ul>
+    </section>
+
+    <!-- سياسة حماية المستهلك -->
+    <section>
+        <h2>سياسة حماية المستهلك</h2>
+        <p>
+            تركّز شركة <strong>علوم عقارية</strong> على حماية عملائها وضمان حقوقهم في جميع التعاملات،
+            سواء كانت متعلقة بالعقارات السكنية أو التجارية أو الاستثمارية.
+        </p>
+        <ul>
+            <li>التزام الشركة بتقديم معلومات دقيقة وموثوقة عن العقارات والخدمات.</li>
+            <li>توفير آلية واضحة لتقديم الشكاوى أو الاستفسارات عبر قنوات رسمية.</li>
+            <li>الرد على طلبات العملاء خلال مدة زمنية لا تتجاوز 7 أيام عمل.</li>
+            <li>ضمان السرية الكاملة لجميع الشكاوى أو البلاغات المقدمة من العملاء.</li>
+            <li>العمل على حل النزاعات ودّياً بما يحفظ حقوق جميع الأطراف، واللجوء للجهات الرسمية عند الحاجة.</li>
+        </ul>
+    </section>
+
 
     <!-- الفوتر -->
     <footer>
@@ -411,8 +379,9 @@
         <p>Developed by<a target="_blank" href="https://ahmedabdalgayed.github.io/">Ahmed Abdalgayed</a></p>
     </footer>
 
-    <script>
 
+
+    <script>
         // navvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
         const sidebar = document.getElementById('sidebar');
         const overlay = document.getElementById('overlay');
@@ -452,21 +421,7 @@
         // إغلاق بـ Escape
         document.addEventListener('keydown', (e) => { if (e.key === 'Escape') closeSidebar(); });
         // navvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
-
-        // أنيميشن ظهور الكروت (Zoom In + Fade)
-        const cards = document.querySelectorAll(".card");
-        const observer = new IntersectionObserver(entries => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add("visible");
-                    observer.unobserve(entry.target);
-                }
-            });
-        }, { threshold: 0.2 });
-
-        cards.forEach(card => observer.observe(card));
     </script>
-
 </body>
 
 </html>
